add writeFileSync to write message.txt when the submit is clicked

--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "description": "node project 2021",
   "main": "index.js",
   "author": "Samuel Razali",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "dependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
