--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "nodemon index.js"
   },
-  "dependencies": {
+  "devDependencies": {
+    "express": "^4.17.1",
     "nodemon": "^2.0.7"
   }
 }
