--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "dependencies": {
     "express": "^4.17.1"
   },
-  "scripts": {"start" : "nodemon index.js"}
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.10"
+  }
 }
