--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
   },
-  "dependencies": {}
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express-handlebars": "^5.3.2",
+    "pug": "^3.0.2"
+  }
 }
