--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "start": "nodemon index.js"
   },
   "devDependencies": {
-    "express": "^4.17.1",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
     "ejs": "^3.1.6",
+    "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "pug": "^3.0.2"
   }
