--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Samuel Razali",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "debug": "node --inspect index.js"
   },
   "devDependencies": {
     "eslint": "^7.30.0",
