--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "uuid": "^8.3.2"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "mongodb": "^4.1.1",
+    "mongoose": "^6.0.10",
     "pug": "^3.0.2"
   }
 }
